# smartsort

./: .gitignore  Dockerfile  Dockerfile.ai  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
classifier/: ai_local.py  classifiers.py  extractor.py  pipeline.py  redactor.py  rules.py  types.py
config/: categories.yaml
inference/: __init__.py  diagnostics.py  orchestrator.py  queue.py  router.py  types.py  worker.py
movers/: organizer.py
tests/: test_ai_local.py  test_compose_autoscale.py  test_diagnostics.py  test_dryrun_smoke.py  test_extractor.py  test_inference_orchestrator.py  test_inference_queue.py  test_inference_router.py  test_inference_types.py  test_inference_worker.py  test_model_resolver.py  test_organizer.py  test_pipeline.py  test_redactor.py  test_rules.py
