[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartsort"
version = "0.2.0"
description = "Local-first file classification and sorting CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Happy Patel" }]
keywords = ["cli", "file-organizer", "ollama", "classifier"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "PyYAML>=6.0.1",
    "PyMuPDF>=1.24.2",
    "python-docx>=1.1.2",
    "pandas>=2.2.2",
    "litellm>=1.35.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
smartsort = "main:app"

[project.urls]
Homepage = "https://github.com/HAP2Y/smartsort"

# ---- packaging ----
[tool.hatch.build.targets.wheel]
packages = ["classifier", "movers"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"
"config/categories.yaml" = "config/categories.yaml"

# ---- tooling ----
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]
